hphp/hack/test/typecheck/xhp/required_attr/override.php.exp
File "override.php", line 6, characters 7-9:
Class :c1 does not correctly implement all required members  (Typing[4315])
File "override.php", line 6, characters 19-21:
Some members are incompatible with those declared in type :a1
Read the following to see why:
File "override.php", line 6, characters 35-37:
Redeclared attribute must not be less strict
File "override.php", line 4, characters 35-37:
The attribute is required, which is stricter than lateinit
File "override.php", line 7, characters 7-9:
Class :d1 does not correctly implement all required members  (Typing[4315])
File "override.php", line 7, characters 19-21:
Some members are incompatible with those declared in type :a1
Read the following to see why:
File "override.php", line 7, characters 35-37:
Redeclared attribute must not be less strict
File "override.php", line 4, characters 35-37:
The attribute is required, which is stricter than not required or lateinit
File "override.php", line 12, characters 7-9:
Class :d2 does not correctly implement all required members  (Typing[4315])
File "override.php", line 12, characters 19-21:
Some members are incompatible with those declared in type :a2
Read the following to see why:
File "override.php", line 12, characters 35-37:
Redeclared attribute must not be less strict
File "override.php", line 9, characters 35-37:
The attribute is lateinit, which is stricter than not required or lateinit
File "override.php", line 15, characters 7-9:
Class :b3 does not correctly implement all required members  (Typing[4110])
File "override.php", line 15, characters 19-21:
Some members are incompatible with those declared in type :a3
Read the following to see why:
File "override.php", line 15, characters 35-37:
Member :a has the wrong type
File "override.php", line 15, characters 35-37:
Typing error
File "override.php", line 15, characters 35-37:
Expected int
File "override.php", line 14, characters 35-37:
But got ?int
File "override.php", line 16, characters 7-9:
Class :c3 does not correctly implement all required members  (Typing[4110])
File "override.php", line 16, characters 19-21:
Some members are incompatible with those declared in type :a3
Read the following to see why:
File "override.php", line 16, characters 35-37:
Member :a has the wrong type
File "override.php", line 16, characters 35-37:
Typing error
File "override.php", line 16, characters 35-37:
Expected int
File "override.php", line 14, characters 35-37:
But got ?int
